--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,45 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+
+.main {
+  align-items: center;
+  display: flex;
+  width: 100%;
+  height: 100vh;
+  justify-content: center;
+}
+
+.container-name {
+  gap: 10px;
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  margin-bottom: 26px;
+}
+
+.container-name > p {
+  letter-spacing: 8px;
+  color: #e0dfe0;
+  font-size: 130px;
   text-align: center;
+  font-weight: 600;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.highlighted {
+  color: #fefefe;
+  background-color: #0d4f36;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
+.container-form > div {
+  display: flex;
+  gap: 46px;
+  justify-content: center;
+} 
+
+@media (max-width: 600px) {
+  .container-name > p {
+    font-size: 60px;
   }
-  to {
-    transform: rotate(360deg);
+
+  .container-form > div {
+    gap: 6px;
   }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
 }
